[package]
name = "reed"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argh = "0.1"
bytes = "0.4"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-core", "macros", "stream"] }
tonic = "0.1"

rdkafka = { version = "0.23", features = ["cmake-build"] }

[build-dependencies]
tonic-build = "0.1"
