[package]
name = "reed"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
description = """
Proximo Server implementation written in Rust.
"""
documentation = "https://github.com/simonhdickson/reed"
homepage = "https://github.com/simonhdickson/reed"
repository = "https://github.com/simonhdickson/reed"
readme = "readme.md"
license = "MIT"
edition = "2018"

[dependencies]
argh = "0.1"
env_logger = "0.7"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "stream"] }
tonic = "0.1"

rdkafka = { version = "0.23", features = ["cmake-build"] }

[build-dependencies]
tonic-build = "0.1"
